...
                android:textSize="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/add_friend_to_tour_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/prompt_email"
...
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/add_friend_to_tour_error_tv"
                android:layout_width="283dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:textColor="@color/colorPrimaryDark"
...
                android:layout_gravity="center"
                android:indeterminate="true"
                android:background="#EEEEEE"
                android:visibility="gone"/>

            <Button
                android:id="@+id/add_friend_to_tour_search_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_gravity="center"
                android:enabled="true"
                android:text="Search"
                android:textStyle="bold"
                android:textColor="#EEEEEE"
                android:background="@drawable/btn_shape_selector_primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
...
                    android:background="@drawable/item_tour_bg_img"
                    android:scaleType="fitXY"
                    android:src="@drawable/default_image"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/add_friend_to_tour_friendName_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="24dp"
                    android:layout_marginBottom="1dp"
...
                    android:textColor="@color/colorAccent"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/add_friend_to_tour_add_btn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/ic_baseline_add_24"
                    android:drawablePadding="10dip"
                    android:layout_gravity="left"
...
