...
                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/personal_current_tours_srl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/personal_current_tours_rv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="4dp"
                        android:scrollbars="vertical"
                        android:fadeScrollbars="false"
                        android:visibility="invisible" />
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/personal_future_tours_title_btn"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:clickable="true"
                android:text="Future Tours"
...
                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/personal_past_tours_srl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/personal_past_tours_rv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="4dp"
                        android:scrollbars="vertical"
                        android:fadeScrollbars="false"
                        android:paddingBottom="8dp"
...
